run/resources/css/re-com.css
/* ... */
.chosen-container-active.chosen-with-drop .chosen-single div {
  background: transparent;
  border-left: none;
}
.chosen-container-active.chosen-with-drop .chosen-single div b {
  background-position: -18px 7px;
}
.chosen-container-active .chosen-choices {
  border: 1px solid #66afe9;
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .075) inset, 0 0 8px rgba(82, 168, 236, .6);
  box-shadow: 0 1px 1px rgba(0, 0, 0, .075) inset, 0 0 8px rgba(82, 168, 236, .6);
  -webkit-transition: border linear .2s, box-shadow linear .2s;
  -o-transition: border linear .2s, box-shadow linear .2s;
  transition: border linear .2s, box-shadow linear .2s;
}
.chosen-container-active .chosen-choices .search-field input[type="text"] {
  color: #111 !important;
}
.chosen-container-active.chosen-with-drop .chosen-choices {
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}
.chosen-disabled {
  cursor: default;
  opacity: 0.5 !important;
}
.chosen-disabled .chosen-single {
  cursor: default;
}
.chosen-disabled .chosen-choices .search-choice .search-choice-close {
  cursor: default;
}
.chosen-rtl {
  text-align: right;
}
.chosen-rtl .chosen-single {
  padding: 0 8px 0 0;
  overflow: visible;
}
.chosen-rtl .chosen-single span {
  margin-left: 26px;
  margin-right: 0;
  direction: rtl;
}
.chosen-rtl .chosen-single div {
  left: 7px;
  right: auto;
}
.chosen-rtl .chosen-single abbr {
  left: 26px;
  right: auto;
}
.chosen-rtl .chosen-choices .search-field input[type="text"] {
  direction: rtl;
}
.chosen-rtl .chosen-choices li {
  float: right;
}
.chosen-rtl .chosen-choices .search-choice {
  margin: 6px 5px 3px 0;
  padding: 3px 5px 3px 19px;
}
.chosen-rtl .chosen-choices .search-choice .search-choice-close {
  background-position: right top;
  left: 4px;
  right: auto;
}
.chosen-rtl.chosen-container-single .chosen-results {
  margin: 0 0 4px 4px;
  padding: 0 4px 0 0;
}
.chosen-rtl .chosen-results .group-option {
  padding-left: 0;
  padding-right: 15px;
}
.chosen-rtl.chosen-container-active.chosen-with-drop .chosen-single div {
  border-right: none;
}
.chosen-rtl .chosen-search input[type="text"] {
  background: url("chosen-sprite.png") no-repeat -28px -20px, #ffffff;
  direction: rtl;
  padding: 4px 5px 4px 20px;
}
@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-resolution: 144dpi) {
  .chosen-rtl .chosen-search input[type="text"],
  .chosen-container-single .chosen-single abbr,
  .chosen-container-single .chosen-single div b,
  .chosen-container-single .chosen-search input[type="text"],
  .chosen-container-multi .chosen-choices .search-choice .search-choice-close,
  .chosen-container .chosen-results-scroll-down span,
  .chosen-container .chosen-results-scroll-up span {
    background-image: url("chosen-sprite@2x.png") !important;
    background-size: 52px 37px !important;
    background-repeat: no-repeat !important;
  }
}

/*----------------------------------------------------------------------------------------
  ...END OF BOOTSTRAP-CHOSEN SECTION

  bootstrap-chosen additions
----------------------------------------------------------------------------------------*/

/* Mouse hover colour in drop-downs */
.chosen-container .chosen-results li.mouseover {
  background-color: #eeeeee;
  background-image: none;
}

/*----------------------------------------------------------------------------------------
/* Bootstrap list-group-item variation */
.compact {
    margin: 0;
    height: 19px;
    white-space: nowrap;
    border: none;
    padding: 0;
    overflow: hidden;
    cursor: pointer;
    font-size: small;
    text-overflow: ellipsis;
}

/*----------------------------------------------------------------------------------------
  Custom scrollbars
   - http://css-tricks.com/custom-scrollbars-in-webkit
   - http://codemug.com/html/custom-scrollbars-using-css
----------------------------------------------------------------------------------------*/

::-webkit-scrollbar {
  width: 10px;
  border-radius: 5px;
  background-color: rgba(0,0,0,0.05);
  }
::-webkit-scrollbar:horizontal {
  height:10px;
  }
::-webkit-scrollbar:hover {
  background-color:rgba(0,0,0,0.20);
  }
::-webkit-scrollbar-thumb:horizontal, ::-webkit-scrollbar-thumb:vertical {
  background:rgba(0,0,0,0.25);
  border-radius: 5px;
  }
::-webkit-scrollbar-thumb:horizontal:active, ::-webkit-scrollbar-thumb:vertical:active {
  background:rgba(0,0,0,0.45);
  }

/*----------------------------------------------------------------------------------------
  Required for constraining an application to the height of the browser window
----------------------------------------------------------------------------------------*/

html, body {
    height: 100%;
    margin: 0px;
    padding: 0px;
    color:  #666366
}

/*----------------------------------------------------------------------------------------
  Time component
----------------------------------------------------------------------------------------*/
.time-icon {
  border: 1px solid #bbb;
  border-radius: 0 4px 4px 0;
  background-color: #ddd;
  display: inline-block;
  height: 20px;
  line-height: 20px;
  margin-top: 1px;
  text-align: center;
  vertical-align: middle;
  width: 20px;
}
.time-entry {
  flex:  none;
  padding-left: 2px;
  padding-top:  0px;
  font-size:    11px;
  width:        35px;
}
.test-time {
  font-size:    16px;
}

